# motif-Convo

./: .gitignore  .gitignore.swp  .motifconvolvetorch.py.swp  .util.py.swp  README.md  motifConvolve.py  motifDiffVCF.py  motifconvolvetorch.py  pyproject.toml  util.py
TestInput/: Test.meme
src/motifConvolve/: motifConvoVarDiff.py  motifConvolve.py  motifConvolveNEW.py  util.py  utilNEW.py
